# mecanum_mpc

./: .gitignore  .gitmodules  CMakeLists.txt  patch.diff  toolchain-rpi.cmake
include/: mpc_proto.hpp  solver.h  solver.hpp
include/rockit_interface/: CasadiCodegen.hpp  DynamicLib.hpp  FunctionEvaluation.hpp  StageOCP.hpp  json.h  rockit_solver.hpp
src/cpp/: slides.cpp  solver.cpp  solver_daemon.cpp  solver_jni.cpp
src/cpp/rockit_interface/: CasadiCodegen.cpp  DynamicLib.cpp  FunctionEvaluation.cpp  StageOCP.cpp  json.cpp  rockit_solver.cpp
src/py/: gen_mpc.py  gen_mpc_rockit.py  limelight.py
